@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v8r8p14
+  {
+    Modules = LHCbDIRAC:v8r8p14, LHCbWebDIRAC:v4r3p3
+    Depends = DIRAC:v6r17p28
+    LcgVer = 2017-05-23
+  }
+
   v8r8p13
   {
     Modules = LHCbDIRAC:v8r8p13, LHCbWebDIRAC:v4r3p3
