@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r8p13",
+  "version": "v8r8p14",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p27",
+      [ "Dirac", "v6r17p28",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v11r14",
